@@ -1,0 +1,3 @@
+prog: bug470713
+vgopts: -q
+args: `pwd`/bug470713
