@@ -38,6 +38,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 469146  massif --ignore-fn does not ignore inlined functions
 469768  Make it possible to install gdb scripts in a different location
 470520  Multiple realloc zero errors crash in MC_(eq_Error)
+470713  Failure on the Yosys project: valgrind: m_libcfile.c:1802
+        (Bool vgPlain_realpath(const HChar *, HChar *)): Assertion 'resolved' failed
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
